--- a/assets/style.css
+++ b/assets/style.css
@@ -20,8 +20,13 @@ input {
   min-height: 42px;
   font-size: 16px;
   border-radius: 4px;
+  outline: none;
+  border: 4px solid #7e7e7e;
   padding-left: 12px;
   margin: 10px 0 0;
+}
+input:focus {
+  border-color: red;
 }
 
 .main-container {
@@ -53,7 +58,7 @@ header {
 }
 
 .gameplay-container {
-  display: flex;
+  display: none;
   margin-top: 12px;
   min-width: 400px;
   min-height: 400px;
@@ -77,6 +82,13 @@ div[id^="row-"] div {
   min-width: 140px;
   min-height: 140px;
   cursor: pointer;
+}
+
+div[id^="row-"] div:hover {
+  box-shadow: 0px 0px 8px 6px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  transform: scale(1.04);
+  transition-duration: 0.2s;
 }
 
 .winner {
@@ -103,6 +115,20 @@ div[id^="row-"] div {
   border-right: 3px solid red;
 }
 
+#a1:hover,
+#a2:hover,
+#a3:hover,
+#b1:hover,
+#b2:hover,
+#b3:hover,
+#c1:hover,
+#c2:hover,
+#c3:hover {
+  background-color: indianred;
+  border-color: indianred;
+  color: cornsilk;
+}
+
 #winner-text {
   font-family: inherit;
   font-size: 32px;
@@ -112,7 +138,9 @@ div[id^="row-"] div {
   display: none;
   width: 117px;
   height: 53px;
+  border-radius: 4px;
   align-self: center;
+  outline: none;
 }
 
 #startBtn,
@@ -136,5 +164,5 @@ div[id^="row-"] div {
 #startBtn:active,
 #reset:active {
   background-color: #3f3f3f;
-  border-color: #fff;
+  border-color: red;
 }
