--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,7 @@ input {
   padding-left: 12px;
   margin: 10px 0 0;
 }
+
 input:focus {
   border-color: red;
 }
@@ -82,51 +83,49 @@ div[id^="row-"] div {
   min-width: 140px;
   min-height: 140px;
   cursor: pointer;
+  border: 2px solid red;
+}
+
+div[id="row-1"] div {
+  border-top: none;
+}
+
+div[id="row-3"] div {
+  border-bottom: none;
+}
+
+div[id^="row-"] div:first-child {
+  border-left: none;
+}
+
+div[id^="row-"] div:last-child {
+  border-right: none;
+}
+
+div[id^="row-"] {
+  box-sizing: border-box;
 }
 
 div[id^="row-"] div:hover {
-  box-shadow: 0px 0px 8px 6px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 8px 6px rgba(0, 0, 0, 0.6), 0 0 10px #000 inset;
   border-radius: 10px;
   transform: scale(1.04);
   transition-duration: 0.2s;
+}
+
+div[id="row-1"] div:hover,
+div[id="row-2"] div:hover,
+div[id="row-3"] div:hover,
+div[id^="row-"] div:last-child:hover {
+  background-color: indianred;
+  border-color: indianred;
+  color: cornsilk;
 }
 
 .winner {
   flex: 1;
   margin-top: 12px;
   text-align: center;
-}
-
-#a1,
-#a2,
-#b1,
-#b2 {
-  border-right: 3px solid red;
-  border-bottom: 3px solid red;
-}
-
-#a3,
-#b3 {
-  border-bottom: 3px solid red;
-}
-
-#c1,
-#c2 {
-  border-right: 3px solid red;
-}
-
-#a1:hover,
-#a2:hover,
-#a3:hover,
-#b1:hover,
-#b2:hover,
-#b3:hover,
-#c1:hover,
-#c2:hover,
-#c3:hover {
-  background-color: indianred;
-  border-color: indianred;
-  color: cornsilk;
 }
 
 #winner-text {
